--- a/.copr/Makefile
+++ b/.copr/Makefile
@@ -1,4 +1,5 @@
 srpm:
-	spectool -R -g $spec
-	rpmbuild -bs $spec
-	mv ~/rpmbuild/SRPMS/* $outdir
+	dnf install -y rpmdevtools
+	spectool -R -g $(spec)
+	rpmbuild -bs $(spec)
+	mv ~/rpmbuild/SRPMS/* $(outdir)
