--- a/.copr/Makefile
+++ b/.copr/Makefile
@@ -1,6 +1,7 @@
 srpm:
 	dnf install -y rpmdevtools
 	cd $(spec)
+	cp * ~/rpmbuild/SOURCES/
 	spectool -R -g openspades.spec
 	rpmbuild -bs openspades.spec
-	mv ~/rpmbuild/SRPMS/* $(outdir)
+	mv ~/rpmbuild/SRPMS/*.rpm $(outdir)
