--- a/.copr/Makefile
+++ b/.copr/Makefile
@@ -1,6 +1,7 @@
 srpm:
 	dnf install -y rpmdevtools
 	cd $(spec)
+	mkdir -p ~/rpmbuild/SOURCES
 	cp * ~/rpmbuild/SOURCES/
 	spectool -R -g openspades.spec
 	rpmbuild -bs openspades.spec
